logs/Slang/generated/keywords/5.6.2--keyword_task.sv.log
name: keyword_task
description: The 'task' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_task.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_task.sv:8:8: error: expected declarator
    bit task;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_task.sv:8:13: error: expected identifier
    bit task;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_task.sv:8:14: error: expected 'endtask'
    bit task;
             ^
